--- a/FootballManager/FootballManager/appsettings.json
+++ b/FootballManager/FootballManager/appsettings.json
@@ -12,7 +12,7 @@
       {
         "Name": "MySQL",
         "Args": {
-          "connectionString": "server=localhost;port=3306;database=footbalmanager;uid=root;password=Kaca4891!",
+          "connectionString": "server=localhost;port=3306;database=footbalmanager;uid=root;password=******",
           "tableName": "logs",
           "storeTimestampInUtc": true
         }
@@ -24,6 +24,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FootballManagerDB": "server=localhost;port=3306;database=footbalmanager;uid=root;password=Kaca4891!"
+    "FootballManagerDB": "server=localhost;port=3306;database=footbalmanager;uid=root;password=******"
   }
 }
